--- a/gb/23/12/21/n14141352.md
+++ b/gb/23/12/21/n14141352.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】灾民讲述地震惨况 甘肃预测到不报</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/12/id14141379-Untitled-1-600x400.jpg" />
 <h6>甘肃拒绝外援救灾；已准确预测地震，消息被隐瞒了；灾情消息被限流，灾民呼吁救援；惨况怵目惊心，凭空出现泥石流。（视频截图）
 </h6>
 <hr>
-	<p>【大纪元2023年12月22日讯】干净世界和油管的各位新老朋友大家好，我是李沐阳，欢迎大家关注《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》。今天是美东时间12月20日（星期三），亚太时间是12月21日（星期四）。</p>
-<p>中共党魁习近平称“十分牵挂”地震灾区的群众，但是却不允许外界前往甘肃驰援救灾。当地的救灾情况究竟怎么样呢？<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%BE%E6%B0%91.md#1">灾民</a>的状况如何呢？灾民们的亲自讲述，让我们了解到了地震发生时的情况，惨不忍睹。</p>
+	<p>【大纪元2023年12月22日讯】干净世界和油管的各位新老朋友大家好，我是李沐阳，欢迎大家关注《新闻看点》。今天是美东时间12月20日（星期三），亚太时间是12月21日（星期四）。</p>
+<p>中共党魁习近平称“十分牵挂”地震灾区的群众，但是却不允许外界前往甘肃驰援救灾。当地的救灾情况究竟怎么样呢？灾民的状况如何呢？灾民们的亲自讲述，让我们了解到了地震发生时的情况，惨不忍睹。</p>
 <p>其实这场地震中的伤亡是完全可以避免的。陕西研究团队在地震前4天，准确预测到了地震范围和震级大小，但是当局没有通知百姓。这是一场不折不扣的人祸。</p>
 <p>说这些之前，先插入一段Surfshark VPN的广告，这是本期节目的赞助商。</p>
 </p>
@@ -17,7 +17,7 @@
 <p>据地震台网监测，截止到今天上午9点，积石山6.2级地震后，共记录到423次余震。其中最大余震4.1级，距离主震大约14公里。</p>
 <p>对于官方通报的情况，我仍然持怀疑态度。原因昨天已经说了，这里不再重复。大家如果想了解，可以翻看我昨天的节目。这里说点最新的情况和现象。</p>
 <p>中共副总理张国清昨天（19日）抵达了灾区，并在当晚主持会议。他声称“习近平十分牵挂受灾群众安危冷暖”，李强也对抢险救援进行安排部署等等。</p>
-<p>习近平真的“十分牵挂”受灾群众吗？如果“牵挂”受灾群众，应该到灾区去看看<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%BE%E6%B0%91.md#1">灾民</a>，做做秀、装装样子，也可以再收割一波民意。连朝鲜领导人金正恩都知道到灾区做做秀，甚至可以装出痛哭流涕的样子，但是中共党魁却一点都不装。中共官媒今天报导，他在北京会见了来访的俄罗斯总理米舒斯京。</p>
+<p>习近平真的“十分牵挂”受灾群众吗？如果“牵挂”受灾群众，应该到灾区去看看灾民，做做秀、装装样子，也可以再收割一波民意。连朝鲜领导人金正恩都知道到灾区做做秀，甚至可以装出痛哭流涕的样子，但是中共党魁却一点都不装。中共官媒今天报导，他在北京会见了来访的俄罗斯总理米舒斯京。</p>
 <p>很显然，“十分牵挂”灾民是口头上说说的。在习近平的心里，真正牵挂的、在意的是俄罗斯总理的来访。大国的面子不能受影响，灾民的死活无足轻重。</p>
 <p>今天（20日），积石山地震抗震救灾指挥部发布公告，要求外界“暂缓前往积石山开展救援行动”，声称“目前到位的救援力量能够满足救援工作需要”。公告中表示，“积石山县干部群众同各界力量一道”，“积极自救互救”。目前搜救工作“已基本结束”，工作重心转向安置灾民和清理废墟。</p>
 <p>此前一天，这个指挥部和甘肃省紧急管理厅还通过官媒表示，应急厅已经设施“社会救援协调机制”，“不建议外省市社会救援力量自行前往”。</p>
@@ -31,12 +31,12 @@
 <p>先请大家看一张截图。一位网友航拍了积石山震后情况，从中可以看到，大量的楼房建筑倒塌了，到处是一片废墟。截图上面的字带有明显的质疑，“6.2级就这样了……”</p>
 <p>昨天我就提到了，这场地震真的只是6.2级吗？6.2级的地震，会有这么巨大的威力吗？看这样房倒屋塌的惨况，我还要问，伤亡的人数真的只有官方通报那些吗？要知道地震发生的时间是午夜时分，许多人这个时候已经睡觉了。</p>
 <p>看过昨天节目的朋友一定记得，我严重怀疑当局预测到了地震。但是被压了下去，知情不报，所以才造成这么巨大的生命损失。今天（20日）的香港《南华早报》，证实了我的判断。</p>
-<p>这家有中共背景的香港英文媒体报导，中国科学家在几天前就收到了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E5%9C%B0%E9%9C%87.md#1">甘肃地震</a>“不祥的讯号”。文章指出，中国陕西省的研究人员“开发了一项突破性技术，使他们能够成功预测过去10年来全球发生的每一次7.0级或以上的地震”。</p>
+<p>这家有中共背景的香港英文媒体报导，中国科学家在几天前就收到了甘肃地震“不祥的讯号”。文章指出，中国陕西省的研究人员“开发了一项突破性技术，使他们能够成功预测过去10年来全球发生的每一次7.0级或以上的地震”。</p>
 <p>文章表示，研究人员使用高精度设备，以低频监测地球引力场，寻找引力波中的异常现象。“这些异常现象可能是地震即将发生的预警信号”。</p>
 <p>报导中指出，“周五上午，研究人员收到一条短信提示，称多个传感器读数异常，他们这才意识到最近一次地震即将发生。”随后研究小组就“讨论地震可能发生的地点”。</p>
 <p>这里提到的“周五上午”，应该是12月15日上午。也就是说，在地震发生前4天。中国的研究人员已经准确预测到，最近在甘肃省境内将会发生大地震，只是不能确定地震的具体位置。</p>
 <p>报导表示，研究小组已经计算出，在记录到异常数据读数的“三到五天内，地震发生的可能性很大”。而且西安交通大学教授兼院长张茂盛说，“根据观测到的数据峰值强度，他们还能预测地震的震级将在6.27级左右。”</p>
-<p>西北工业大学教授刘华强（音）也表示，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%98%E8%82%83%E5%9C%B0%E9%9C%87.md#1">甘肃地震</a>发生的前四天，在陕西周围四个不同的传感器位置，几乎在同一时间记录到了异常引力波读数，“这表明它们是以光速传播的。不难理解这是地震前兆”。“唯一无法确定的是地震的地点”。</p>
+<p>西北工业大学教授刘华强（音）也表示，甘肃地震发生的前四天，在陕西周围四个不同的传感器位置，几乎在同一时间记录到了异常引力波读数，“这表明它们是以光速传播的。不难理解这是地震前兆”。“唯一无法确定的是地震的地点”。</p>
 <p>大家明白了吗？研究人员在几天前已经准确地预测到，三到五天内甘肃某地将有地震，而且可以说精准预测到了地震震级。但是预测到之后呢？报导没有说他们是否向上进行了汇报，也没有说明上面是什么反应。</p>
 <p>其实已经显而易见了。研究人员应该是向上面进行了汇报的，这是他们的职责所在。如果没有汇报，他们也就不会通过《南华早报》澄清事实了，这明显是研究人员不愿意替中共背锅的表现，甚至是向习近平当局反击的表现。</p>
 <p>换句话说，上面得到研究人员的汇报后，明知道甘肃境内将有地震，但是把地震的消息压了下来，没有通报给百姓。至于所谓的专家声称房屋质量差、震源深度较浅等，这纯粹是为中共洗地，在推卸责任。</p>
@@ -50,7 +50,7 @@
 <p>马女士在地震剧烈的摇晃中惊醒了过来，随即从7楼狂奔到楼下。她说“之前没有任何预警预告”，当时已经睡着的马女士说，“睡梦中感觉地动山摇，直接被震醒了，发现整栋楼都在剧烈晃动。”</p>
 <p>当时的气温是零下十几度，非常寒冷。但是惊慌之中，很多人根本来不及穿衣服，有的就是裹着一条被子。马女士说“各种各样的都有”，人们一同跑到了空旷的地方。</p>
 <p>幸存下来的灾民现在是挨饿受冻，但他们与那些已经罹难的人们相比，应该说还是幸运的。他们还有机会看清中共的邪恶，而那些罹难者，已经没有这样的机会了。这些人可能走到生命最后一刻，也不知道中共有多么的邪恶。</p>
-<h2>惨况怵目惊心 凭空出现<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%A5%E7%9F%B3%E6%B5%81.md#1">泥石流</a></h2>
+<h2>惨况怵目惊心 凭空出现泥石流</h2>
 <p>在这场地震中，大河家镇是绝对的重灾区。在甘肃死亡的113人中，大河家镇就有73人。而在大河家镇，陈家村的灾情又是最为严重的村庄之一，20人遇难，23人送医。</p>
 <p>这个常住人口2600多人的小村庄，四社有8个人遇难，此外还有一个孕妇的腹中胎儿。罹难者中包括4个小孩，年龄最小的只有9岁。昨天下葬的时候，匆忙中只用了白布进行缠裹。</p>
 <p>地震当时，76岁的舍老汉正在青海走亲戚。听到家中地震的消息，他连夜往家赶。到家才得知，42岁的儿子和12岁的孙子都已经不幸去世。别人告诉他，当时儿子、儿媳和孙子正躺在炕上取暖。屋顶坍塌，儿子孙子当场去世。怀着7个月身孕的儿媳妇被砖石砸中腹部，胎儿也没能保住。</p>
@@ -65,50 +65,47 @@
 <p>大河家镇大河村的灾情也非常严重。今天“重庆时间网”报导，地震中有一家三口不幸遇难，只留下年迈的爷爷和两个幼小的女孩。视频中的老人满面哀愁，两个小孩子在街头相拥着。</p>
 <p>这场地震也波及到了相邻的青海省。更可怕的是，地震发生后，青海省海东市中川乡有两个村被淤泥包围了。高达3米的浓稠泥浆翻滚着涌进了村子，冲毁、掩埋了大量的房屋和村民。</p>
 <p>央视记者在现场描述，自己的身高1.66米，却看不到淤泥的顶部。“至少是有二米五厚，最厚的地方可能要超过三米”。</p>
-<p>这些<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%A5%E7%9F%B3%E6%B5%81.md#1">泥石流</a>从哪来的呢？有人说附近山上的水潭溃灞了，有人说附近干渠溃灞，还有人说地震引起底下泥水喷涌迸发。没有人知道泥石流的真正来源，人们只知道很多房屋被冲毁了，还有很多人被掩埋了。</p>
+<p>这些泥石流从哪来的呢？有人说附近山上的水潭溃灞了，有人说附近干渠溃灞，还有人说地震引起底下泥水喷涌迸发。没有人知道泥石流的真正来源，人们只知道很多房屋被冲毁了，还有很多人被掩埋了。</p>
 <p>一位住在邻村的被埋者家属介绍，地震过后泥石流就来了。他的丈母娘和两个女儿，还有一个女儿的儿媳妇，四个人逃难出门时，被泥石流掩埋了。这一片共有十多人被埋。</p>
 <p>幸运逃生的杨海平介绍，当时一家人被可怕的声响从梦中惊醒。地震时“像是打雷的声音钻到耳朵里”，地面带动墙体开始剧烈晃动，人往外逃跑时都占比不稳。</p>
 <p>杨海平一家五口脱险不久，就听见不远处再度传来巨响，这次的响声“哗哗像炮仗的声音”。后来才知道，那是泥石流的声音。比杨海平家地势更低的一片民居，在泥石流的冲击下被掩埋了，其中包括他的发小一家。</p>
 <p>一场大地震，造成无数家庭家破人亡。还是说这本是一场可以避免的灾难，是因为中共当局隐瞒了地震的消息，使疏于防范的人们遭受重大的生命损失，制造了一场实实在在的人祸。</p>
 <p>一直呼吁人们认清中共的邪恶本质。这个魔鬼是来毁灭人类的，它的所有行为，无一不是在败坏、毁灭着人类。只有远离它，从内心唾弃中共，才会帮助人们远离灾祸和不幸。</p>
-<p>以上就是今天跟大家分享的全部内容了。我们的节目在干净世界和油管都有，也希望您到干净世界关注《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》频道。如果您喜欢我的节目，请别忘记点赞、留言并订阅，同时加按小铃铛。如果您愿意支持我，视频下方有捐款链接，大家可以对我进行资助，或者订阅我的会员节目。</p>
+<p>以上就是今天跟大家分享的全部内容了。我们的节目在干净世界和油管都有，也希望您到干净世界关注《新闻看点》频道。如果您喜欢我的节目，请别忘记点赞、留言并订阅，同时加按小铃铛。如果您愿意支持我，视频下方有捐款链接，大家可以对我进行资助，或者订阅我的会员节目。</p>
 <p>最后再提醒大家，蓝莓优品是我的长期合作伙伴，里面包括珍黑染发护发乳、牙宝乐牙粉等等。所有商品都是正品保真，价格全网最低。希望大家把这个网址保存下来，以后购物会方便一些。观众朋友，感谢您的收看，咱们明天再会。</p>
 <p>《新闻看点》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103074.md#1">【新闻看点】传习近平很震怒 李尚福要惨了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/9/n14133215.md#1">【新闻看点】秦刚死传更多细节 谁出卖了火箭军</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137862.md#1">【新闻看点】知情人揭北京地铁事件惊人内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140436.md#1">【新闻看点】刘鹤“现身”辟谣 汤晓鸥葬礼秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：晶莹华贵 施华洛世奇岁末有约</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/26/n14103074.md#1">【新闻看点】传习近平很震怒 李尚福要惨了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/9/n14133215.md#1">【新闻看点】秦刚死传更多细节 谁出卖了火箭军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/16/n14137862.md#1">【新闻看点】知情人揭北京地铁事件惊人内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/20/n14140436.md#1">【新闻看点】刘鹤“现身”辟谣 汤晓鸥葬礼秘密</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/26/n10932836.md#1" target="_blank">张林：间谍国（二）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/7/13/n8093984.md#1" target="_blank">袁斌：绝症病孩得新生，法轮功太神奇了！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138664.md#1">冬至知多少？冬至文化典故与民俗集锦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141385.md#1">【未解之谜】留意！它们发出的预警信号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136260.md#1">血红天空 雷打雪  亡朝前夕怪异天象知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133555.md#1">古代这些高官出仕前皆梦得神示</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138940.md#1">【未解之谜】虎鲸暴走之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142588.md#1">【菁英论坛】最后的收割 中共盯上200万亿民储</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142141.md#1">【菁英论坛】南海对抗升级 美中菲都难退让</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142194.md#1">【新唐人快报】党管游戏 网易腾讯5000亿蒸发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141135.md#1">岳山：王小洪罕见陪党魁出访 国内维稳异常</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142075.md#1">叶剑英孙女叶明子与美国银行家离婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141754.md#1">专家：2024年中共政局凶险 或突发叛乱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142160.md#1">赵少康政见发表会上发生重大口误 舆论哗然</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141362.md#1">黎姿曾因弟出车祸退圈 如今黎婴站立拍全家福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141408.md#1">央视书画节目总导演楼建军猝死 终年56岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142089.md#1">梁朝伟拒绝再搭档刘嘉玲拍戏 网友笑翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142116.md#1">王家卫讲戏难理解？唐嫣称与胡歌最初都听不懂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/28/n11686220.md#1">全球美味圣诞大餐 各国都吃什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114197.md#1">身体有毒素 拍打可以解除很多酸痛问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139620.md#1">简单几招 让家里的猫咪与室内植物和平共处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309168.md#1">【时事军事】乌成功闪击主因 或改变现代作战方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/21/n14141352.htm">【新闻看点】灾民讲述地震惨况 甘肃预测到不报</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141352.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/21/n14141352.htm">【新闻看点】灾民讲述地震惨况 甘肃预测到不报</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/12/21/n14141352.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
