--- a/gb/23/12/27/n14144260.md
+++ b/gb/23/12/27/n14144260.md
@@ -1,34 +1,34 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】党内挑战习路线 政治局谁在反习？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/12/id14144301-Untitled-1-600x400.jpg" />
 <h6>习自视毛二代，毛远新高调现身；《财新》批误国害民，党内挑战习路线；政治局谁在反习？北京出现大字报？拥加密币矿场，23岁华生是谁？（视频截图）
 </h6>
 <hr>
-	<p>【大纪元2023年12月27日讯】干净世界和油管的各位新老朋友大家好，我是李沐阳，欢迎大家关注《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》。今天是美东时间12月26日星期二，亚太时间是12月27日星期三。</p>
-<p>中共党魁最近高调纪念并肯定毛泽东，据称北京街头已经出现了大字报。令人担心<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>会效仿毛泽东发动文革一样的政治运动，打击某些中共高层，以维护自己的统治。事实上习近平把矛头已经对准了政治局的23人，谁在挑战习近平的政治路线呢？</p>
+	<p>【大纪元2023年12月27日讯】干净世界和油管的各位新老朋友大家好，我是李沐阳，欢迎大家关注《新闻看点》。今天是美东时间12月26日星期二，亚太时间是12月27日星期三。</p>
+<p>中共党魁最近高调纪念并肯定毛泽东，据称北京街头已经出现了大字报。令人担心习近平会效仿毛泽东发动文革一样的政治运动，打击某些中共高层，以维护自己的统治。事实上习近平把矛头已经对准了政治局的23人，谁在挑战习近平的政治路线呢？</p>
 <p>一个23岁的中国学生，600多万美元买了一个曼哈顿公寓。特别是花了800多万美元买了一座加密货币矿场。这个人是谁呢？</p>
 <p>下面开始今天的话题。</p>
 </p>
 <p><center><a title="习近平要完成老毛的“未竟事业”？毛远新高调现身；财新批误国害民，北京出现大字报，政治局谁在反习？神秘23岁中国留学生买下前通用电气CEO曼哈顿公寓【新闻看点 李沐阳12.26】" src="https://www.ganjingworld.com/zh-TW/embed/1gdee9fbcvk3kPgbnMoaF8gur10c1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
-<h2>习自视毛二代 <ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AF%9B%E8%BF%9C%E6%96%B0.md#1">毛远新</a>高调现身</h2>
+<h2>习自视毛二代 毛远新高调现身</h2>
 <p>今天（26日）是毛泽东冥诞130周年纪念日。中共现任党魁在今天的座谈会上发表讲话，把毛泽东吹捧上了一个新高度。声称“中国（中共）式现代化”是毛泽东等人的“未竟事业”。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>称，毛泽东带着人民锻造了“伟光正”的中共，建立了“人民当家做主”的新中国，创建了社会主义制度，建立了中共军队等等。中共党魁声称老毛的“功绩是第一位的，错误是第二位的”。</p>
+<p>习近平称，毛泽东带着人民锻造了“伟光正”的中共，建立了“人民当家做主”的新中国，创建了社会主义制度，建立了中共军队等等。中共党魁声称老毛的“功绩是第一位的，错误是第二位的”。</p>
 <p>习近平认为纪念老毛，就是把他开创的事业向前推进。中共特色的现代化是老毛等中共党人的“未竟事业”，是当代中共党人的“历史责任”。他声称毛思想是中共的“精神财富”，要作为中共行动的“长期指导”等等。</p>
 <p>昨天（25日）晚上，在中国灾星出生地湖南韶山，一群二三十岁的毛粉突然聚集在毛泽东像前。其中有3个领头的，1人负责喊口号，1人高举毛遗像，另外1人举着中共带有毛像和“人民万岁”的红旗。</p>
 <p>网络视频显示，这些毛粉“多是文革时期的造反派和红卫兵”，也有不少的中年人。这些人高叫着极左的口号，要求驱逐资本主义，实施公有制和社会主义制度。而且其中很多人还大唱红歌，还有人跳起了文革时期的“忠字舞”。</p>
-<p>不仅如此，毛泽东的侄子、现年82岁的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AF%9B%E8%BF%9C%E6%96%B0.md#1">毛远新</a>和他的家属昨天也出现在了韶山，已经拄拐杖的毛远新向毛泽东献了花篮。毛远新是毛泽东的弟弟毛泽民之子，但是他在毛泽东的身边长大。</p>
+<p>不仅如此，毛泽东的侄子、现年82岁的毛远新和他的家属昨天也出现在了韶山，已经拄拐杖的毛远新向毛泽东献了花篮。毛远新是毛泽东的弟弟毛泽民之子，但是他在毛泽东的身边长大。</p>
 <p>公开资料显示，毛远新毕业于哈尔滨军工学院，文革期间任辽宁革委会副主任、沈阳军区政委。更是一度担任毛泽东与中共政治局之间的联络员，“代传圣旨”。在文革之后，毛远新受到审查，并被判刑入狱17年，1989年在南昌“保外就医”。</p>
 <p>人们对毛远新的印象深刻，除了他是“江青反革命集团案”中唯一一个在世涉案人员外，他也被认为是杀害张志新的主犯之一，手上沾了鲜血。</p>
 <p>当年中共辽宁省委扩大会议审批张志新案，毛远新最后说，“在服刑期间，这么嚣张，继续进行反革命活动，多活一天多搞一天反革命活动，杀了算了”。在对张志新行刑时，当局将张志新割喉，防止她喊出声。这些都与毛远新有着直接关系。</p>
 <p>曾经被投入监狱、身份极度敏感的毛远新，如今公开高调在韶山向毛献花篮，这表明习近平是允许他公开活动了。换句话说，毛远新的名字已经“脱敏”了。</p>
 <p>另外，中共军方22日纪念毛泽东的研讨会上，毛泽东的孙子毛新宇出现在央视画面中。也有网络传闻，毛新宇是毛泽东“扒灰”的产物。不管毛少将是毛泽东的儿子还是孙子，他的露面与毛远新献花篮是一样的，都是对毛泽东的肯定。</p>
-<h2>《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B4%A2%E6%96%B0.md#1">财新</a>》批误国害民 党内挑战习路线</h2>
+<h2>《财新》批误国害民 党内挑战习路线</h2>
 <p>中共党魁把中国人民的大灾星毛泽东奉若神明，其实反映的是习近平的真实思想。他当下的所作所为和推行的政策等等，就是在延续着老毛的极左路线，要把中国再次带回毛时代。</p>
 <p>众所周知，许多中国人都痛恨毛泽东，甚至有很多人认为老毛是货真价实的灾星，把中国带入了动荡不安、灾难频频的境地。这样一个祸害中国人民的魔鬼，习近平不仅从来没有批评、清理过毛泽东的罪过，反而对它顶礼膜拜，并自视为毛泽东的“接班人”，要完成老毛的“未竟事业”。</p>
 <p>其实习近平这么做，也不难理解。所有中共党魁“亲自”参与的一切都被搞砸了，尤其是习近平彻底搞死了中国经济之后，中国人反习反共的情绪空前高涨。许许多多的人盼着习近平快点死，盼着中共快点解体崩溃。体制内外对中共和习近平的骂声一片，反对声浪此起彼伏。</p>
-<p>昨天（25日），大陆《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B4%A2%E6%96%B0.md#1">财新</a>周刊》刊载社论“重温实事求是思想路线”，其中多次呼吁邓小平提出的“实事求是”主张。文章也引用习近平曾经的讲话，“违背实事求是，就会误党误国”等等。</p>
+<p>昨天（25日），大陆《财新周刊》刊载社论“重温实事求是思想路线”，其中多次呼吁邓小平提出的“实事求是”主张。文章也引用习近平曾经的讲话，“违背实事求是，就会误党误国”等等。</p>
 <p>因为文章提到，文革期间国民经济濒临崩溃，官方仍坚称“形势大好”，而且“越来越好”。但事实上民生凋敝、贫穷落后，不仅与发达国家的差距越拉越大，而且也被正在腾飞的周边国家和地区远远甩在后面。</p>
 <p>文章指出，当前民营经济增长乏力，社会预期转弱，财政金融风险显露，社会保障问题日益严峻等。“事关国计，也波及民生”，“知耻近乎勇。唯有靠实事求是，中国才能跳出绝对贫穷陷阱”。</p>
 <p>这篇文章在发出几个小时之后，今天（26日）上午被下架了，原文页面显示“404”。文章被删除的原因是显而易见的，其中提及的问题，正是习近平在搞的。虽然文中也引用了习近平的口号，事实上这是在“以彼之矛、攻彼之盾”。</p>
@@ -50,13 +50,13 @@
 <p>另外23日，江西上饶两名实体店主“超范围”营业，被当地执法部门带上在广场设置的审判席，接受公开审判。当局强迫要求两名店主当众认错、检讨并签字画押，整个做法与文革时期没有区别。</p>
 <p>有海外网友发帖表示，习近平吹赞毛泽东说明两点，“一是习的党性高于人性；二是习为了权力哪怕认贼作父也在所不惜。”也有网友指出，“赞美已逝独裁者是为了美化现独裁者，为自己独裁制造合法性。”</p>
 <p>还有网友唾骂习近平违反孝道，“持续赞美差点要了父亲性命的人，是否违反伦理道德？是否违反孝道？”“他不是习仲勋的儿子，他是毛泽东的孙子。”</p>
-<h2>拥<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E5%AF%86%E5%B8%81.md#1">加密币</a>矿场 23岁华生是谁？</h2>
+<h2>拥加密币矿场 23岁华生是谁？</h2>
 <p>接下来我们说另一个事。一名在纽约大学上学的23岁中国学生，出资800多万美元，买下了通用电气前首席执行官伊梅尔特手中的曼哈顿公寓。他还是德州一座比特币“矿场”的主要拥有者。这个人是谁呢？</p>
 <p>今天（26日）的《纽约时报》罕见披露，这名中国公民的英文名字叫Jerry Yu，翻译成中文是杰??俞，他具有典型的中国“富二代特征”。这个杰??俞拥有康州预科学校的教育背景，住在曼哈顿的公寓里。</p>
 <p>2022年，他还以600多万美元的价格，收购了德州的一座比特币“矿场”，成为这座矿场的主要所有者。这座“矿场”是一个大型计算机中心，杰??俞购买时并没有使用美元，而是用的加密货币。</p>
 <p>这种货币是匿名的，交易也是通过离岸进行，更没有人知道资金的来源。这种保密性，使中国投资者可以避开中共对资金流出中国的限制，也可以避免美国银行体系和美国联邦监管机构的监督。</p>
 <p>要不是杰??俞的比特拉什（BitRush?）公司在德州只有281人的小镇钱宁遇到了麻烦，这一切恐怕还不会为人所知。《纽约时报》表示，比特拉什公司拖欠了承包商的工程款。围绕这些工程项目的一系列诉讼披露文件，曝光了通常不会公开的交易。</p>
-<p>中共政府2021年禁止加密货币采矿之后，中国大陆的投资者就涌入了美国，花费数亿美元建造或者运营加密货币矿。这些矿是中国投资者生产比特币等加密货币的一种方式，他们可以在交易所把<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E5%AF%86%E5%B8%81.md#1">加密币</a>兑换成美元。</p>
+<p>中共政府2021年禁止加密货币采矿之后，中国大陆的投资者就涌入了美国，花费数亿美元建造或者运营加密货币矿。这些矿是中国投资者生产比特币等加密货币的一种方式，他们可以在交易所把加密币兑换成美元。</p>
 <p>比特拉什公司建在一块开阔地上，包括几十座建筑，可疑容纳6000台专用计算机。这类矿场可能会给美国电网带来负担，因此杰??俞的中国人身份才引起美国国家安全方面的注意。美国政府指出，加密货币在离岸业务交易时，没有遵守美国银行的规则。</p>
 <p>上个月，币安承认违反反洗钱法规，同意向美国联邦政府支付超过43亿美元的罚款和没收财产。币安创始人赵长鹏也被美国限制出境，可能面临着一定的牢狱生活。</p>
 <p>在涉及杰??俞的一项诉讼中，德州密码子采矿解决方案公司作证，杰??俞“不仅是中国公民，而且是身居高位、具有高度政治影响力和商业地位的公民”。</p>
@@ -68,45 +68,41 @@
 <p>提供中国商业情报的“丝网”公司记录显示，在曼哈顿杰??俞公寓里签署抵押文件的两个人分别是俞浩（音）和孙晓英（音）。这两个人的名字与一对中国夫妇相符，他们拥有比特拉什公司的股份超过1亿美元，而且孙晓英还是公司的董事。</p>
 <p>我没有查杰??俞的个人信息，也没有找到俞浩和孙晓英的相关资料。但在中国玩比特币等加密货币的人，绝不是普通中国百姓。</p>
 <p>现在每个比特币价值超过4万美元，相当于28万多元人民币。所以能玩得起加密币的人，都是非富即贵。</p>
-<p>以上就是今天跟大家分享的全部内容了。我们的节目在干净世界和油管都有，也希望您到干净世界关注《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》频道。如果您喜欢我的节目，请别忘记点赞、留言并订阅，同时加按小铃铛。如果您愿意支持我，视频下方有捐款链接，大家可以对我进行资助，或者订阅我的会员节目。</p>
+<p>以上就是今天跟大家分享的全部内容了。我们的节目在干净世界和油管都有，也希望您到干净世界关注《新闻看点》频道。如果您喜欢我的节目，请别忘记点赞、留言并订阅，同时加按小铃铛。如果您愿意支持我，视频下方有捐款链接，大家可以对我进行资助，或者订阅我的会员节目。</p>
 <p>观众朋友，感谢您的收看，咱们明天再会。</p>
 <p>《新闻看点》制作组</p>
 <p>责任编辑：叶梓明#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/26/n14103074.md#1">【新闻看点】传习近平很震怒 李尚福要惨了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/9/n14133215.md#1">【新闻看点】秦刚死传更多细节 谁出卖了火箭军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/16/n14137862.md#1">【新闻看点】知情人揭北京地铁事件惊人内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/20/n14140436.md#1">【新闻看点】刘鹤“现身”辟谣 汤晓鸥葬礼秘密</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/15/n10145540.md#1" target="_blank">关敏：不许鼓吹“蒋经国时代”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/16/n11262985.md#1" target="_blank">一份传单圆梦 罗马青年吁中国人脱离暴政</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141385.md#1">【未解之谜】留意！它们发出的预警信号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139954.md#1">【古道人生】穷女婿被岳父辱骂 反而得了大财</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136260.md#1">血红天空 雷打雪  亡朝前夕怪异天象知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132350.md#1">他进到了寺院的壁画中  老僧说了一句“幻由心生”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137486.md#1">良玉不琢不成器 太上老君寻传人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144650.md#1">【全球新闻】以色列开启七线作战 重申停战条件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144647.md#1">【晚间新闻】走线暴涨10倍 中共解体前难民潮？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144113.md#1">【菁英论坛】2024中国三大劫 2025或新人登基</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143372.md#1">甘肃村民：不地震没人知道我们有多穷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143230.md#1">运行一个月 中国造曼谷粉线铁轨高空坠落</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14143091.md#1">韩红团队震区救灾被禁 甘肃红会丑闻曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14143117.md#1">韩红甘肃救灾疑被官方关闭筹款通道 网民热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144188.md#1">亲共艺人黄安不满中国除夕不放假 网民热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144122.md#1">港星卢惠光前妻黎淑贤家中烧炭 送院抢救不治</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14143090.md#1">韩国偶像中安俞真最忙 一年竟有477个行程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142994.md#1">安柏赫德在《水行侠2》戏份减少 仅剩11句对白</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/28/n11686220.md#1">全球美味圣诞大餐 各国都吃什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">PURE AROMA纯精油6件礼品组合装 50%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14109301.md#1">14个圣诞传统美食的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14115912.md#1">瘦不下来？人类犯了一件最不该犯的错！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105768.md#1">选择适合自己的中医断食 168方案轻松做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309168.md#1">【时事军事】乌成功闪击主因 或改变现代作战方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/27/n14144260.htm">【新闻看点】党内挑战习路线 政治局谁在反习？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144260.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/27/n14144260.htm">【新闻看点】党内挑战习路线 政治局谁在反习？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/12/27/n14144260.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
